<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="hello">Hello World</string>
    <string name="app_name">LunchList</string>
    <string name="sound_lunch_alarm">Sound a Lunch Alarm</string>
    <string name="time_for_lunch_summary">Check if you want to know when it is time for lunch</string>
    <string name="lunch_alarm_time">Lunch Alarm Time</string>
    <string name="set_your_desired_time">Set your desired time for the lunch alarm</string>
    <string name="time_for_lunch">It\'s time for lunch!</string>
    <string name="choose_the_order">Choose the order the list uses</string>
    <string name="choose_sort_order">Choose a sort order</string>
    <string name="status_bar_icon_at_lunchtime_checkbox">Check if you want a status bar icon at lunchtime, or uncheck for a full-screen notice</string>
    <string name="use_notification">Use a notification</string>
    <string name="time_for_lunch_message">It\'s time for lunch! Aren\'t you hungry?</string>
    <string name="internet_not_available">Sorry, the Internet is not available</string>
    <string name="location_saved">Location saved</string>
    <string name="name">Name:</string>
    <string name="address">Address:</string>
    <string name="type">Type:</string>
    <string name="take_out">Take-Out</string>
    <string name="sit_down">Sit-Down</string>
    <string name="delivery">Delivery</string>
    <string name="location">"Location: "</string>
    <string name="not_set">(not set)</string>
    <string name="notes">Notes</string>
    <string name="feed_url">Feed URL</string>
    <string name="click_menu_button">Click the MENU button to add a restaurant</string>
    <string name="none"/>
    <string name="empty">No restaurants!</string>
    <string name="alarm_ringtone">Alarm Ringtone</string>
    <string name="indicate_ringtone">Indicate the ringtone to play when it\'s lunchtime</string>
    <string name="phone">"Phone: "</string>
</resources>
