<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:shrinkColumns="1"
        android:stretchColumns="1" >

        <TableRow>

            <TextView android:text="@string/name" />
            
            <EditText android:id="@+id/name" />
            
        </TableRow>

        <TableRow>

            <TextView android:text="@string/address" />
            
            <EditText android:id="@+id/addr" />
            
        </TableRow>
        
        <TableRow>
            
            <TextView android:text="@string/phone"/>
            
            <EditText android:id="@+id/phone" android:layout_span="2" />
            
        </TableRow>

        <TableRow>

            <TextView android:text="@string/type" />

            <RadioGroup android:id="@+id/types" >

                <RadioButton
                    android:id="@+id/take_out"
                    android:checked="true"
                    android:text="@string/take_out" />

                <RadioButton
                    android:id="@+id/sit_down"
                    android:text="@string/sit_down" />

                <RadioButton
                    android:id="@+id/delivery"
                    android:text="@string/delivery" />
                
            </RadioGroup>
            
        </TableRow>

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location" />

            <TextView
                android:id="@+id/location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/not_set"
                 />

        </TableRow>

        <EditText
            android:id="@+id/notes"
            android:gravity="top"
            android:hint="@string/notes"
            android:inputType="textMultiLine"
            android:lines="2"
            android:maxLines="2"
            android:scrollHorizontally="false" />

        <EditText
            android:id="@+id/feed"
            android:hint="@string/feed_url" />

    </TableLayout>

</ScrollView>